<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp"
    tools:context=".ui.activity.InterpolatorActivity"
    android:orientation="vertical">

    <com.hitherejoe.animate.ui.widget.InterpolatorGraphView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/interpolator_activity_graph" />

    <Spinner
        android:id="@+id/interpolator_activity_spinner"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/interpolator_activity_robot_test"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_emoticon_smile_grey"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/control_linearinterpolator"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/interpolator_activity_robot_control"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_emoticon_smile_grey"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/test_red_interpolator"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:onClick="onAnimate"
        android:text="@string/text_animate"
        android:textColor="@color/accent"/>

</LinearLayout>
